RESOLVED FIXED 274896
[macOS Sonoma] [WKWebView] navigator.mediaDevices.getDisplayMedia() not working anymore as long as webView(_:requestMediaCapturePermissionFor:initiatedByFrame:type:decisionHandler:) gets implemented
https://bugs.webkit.org/show_bug.cgi?id=274896
Summary [macOS Sonoma] [WKWebView] navigator.mediaDevices.getDisplayMedia() not worki...
youenn fablet
Reported 2024-05-30 05:15:55 PDT
Attachments
youenn fablet
Comment 1 2024-05-30 05:31:06 PDT
EWS
Comment 2 2024-05-31 00:36:23 PDT
Committed 279566@main (f5ebbc5ed124): <https://commits.webkit.org/279566@main> Reviewed commits have been landed. Closing PR #29302 and removing active labels.
EWS
Comment 3 2024-06-05 15:48:53 PDT
Committed 272448.1069@safari-7618-branch (578588692f3e): <https://commits.webkit.org/272448.1069@safari-7618-branch> Reviewed commits have been landed. Closing PR #1315 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.