Cherry-pick f5ebbc5ed124. rdar://128988615

[macOS Sonoma] [WKWebView] navigator.mediaDevices.getDisplayMedia() not working anymore as long as webView(_:requestMediaCapturePermissionFor:initiatedByFrame:type:decisionHandler:) gets implemented
    https://bugs.webkit.org/show_bug.cgi?id=274896
    rdar://128988615

    Reviewed by Eric Carlson.

    When no capture delegates are implemented, we rely on doing the capture request default action.
    For display capture, it will prompt the user to choose the capture surface.

    When adding a getUserMedia delegate, we no longer rely for getDisplayMedia on the default action.
    Instead we rely on using the getDisplayMedia private delegate or we deny the request otherwise.

    To fix this, we are now checking first whether the request is getUserMedia or getDisplayMedia.
    In the former case, we use the default action if there is no getUserMedia delegate.
    In the latter case, we use the default action if there is no getDisplayMedia delegate.

    Covered by added test.

    * Source/WebKit/UIProcess/Cocoa/UIDelegate.mm:
    (WebKit::isDelegateRespondingToDisplayCapturePermission):
    (WebKit::UIDelegate::UIClient::promptForDisplayCapturePermission):
    (WebKit::UIDelegate::UIClient::decidePolicyForUserMediaPermissionRequest):
    * Tools/TestWebKitAPI/Tests/WebKitCocoa/GetDisplayMedia.mm:
    (-[MediaCaptureUIDelegate webView:requestMediaCapturePermissionForOrigin:initiatedByFrame:type:decisionHandler:]):
    (TestWebKitAPI::GetDisplayMediaTest::SetUp):
    (TestWebKitAPI::GetDisplayMediaTest::promptForCapture):
    (TestWebKitAPI::GetDisplayMediaTest::SetUpInternal):
    (TestWebKitAPI::GetDisplayMediaTest::hasDisplayCaptureDelegate const):
    (TestWebKitAPI::TEST_F):

    Canonical link: https://commits.webkit.org/279566@main

Canonical link: https://commits.webkit.org/272448.1069@safari-7618-branch